[tool.poetry]
name = "aioyookassa"
version = "0.1.6"
description = "Asynchronous wrapper to interact with yookassa.ru API"
authors = ["Marple"]
repository = "https://github.com/n-leonovets/aioyookassa"
documentation = "https://aioyookassa.readthedocs.io/en/latest/"
license = "MIT"
readme = 'README.md'

keywords = [
    "yookassa",
    "asyncio",
    "aiohttp",
    "pydantic",
    "aioyookassa"
]


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
aiohttp = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
